--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Meu primeiro site</title>
 </head>
 <body>
-    <h1>olá mundo</h1>
+    <h1>Sobre a Barbearia Alura</h1>
+    <p>Localizada no coração da cidade,a<strong>Barbearia Alura</strong>traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <p><em>Nossa missão é:,<strong>"Proporcionar autoestima e qualidade de vida aos clientes"</strong></em></p>
+    <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda.O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação a nossos clientes.</p>
 </body>
 </html>
